[tool.poetry]
name = "gha-cache-sample"
version = "0.1.0"
description = ""
authors = ["skokado <terutacchi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.33"
alembic = "^1.8.1"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
